RESOLVED FIXED268878
[WGSL] shader,validation,decl,var:* is failing
https://bugs.webkit.org/show_bug.cgi?id=268878
Summary [WGSL] shader,validation,decl,var:* is failing
Tadeu Zagallo
Reported 2024-02-06 17:12:37 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2024-02-06 17:12:50 PST
Tadeu Zagallo
Comment 2 2024-02-06 17:15:03 PST
EWS
Comment 3 2024-02-07 13:24:51 PST
Committed 274243@main (200045f29c1b): <https://commits.webkit.org/274243@main> Reviewed commits have been landed. Closing PR #23971 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.