[WGSL] shader,validation,decl,var:* is failing https://bugs.webkit.org/show_bug.cgi?id=268878 rdar://122436149

Reviewed by Mike Wyrzykowski.

Validate the type of variable declarations according to the spec rules[1] based
on the address space and access mode.

[1]: https://www.w3.org/TR/WGSL/#var-and-value

* Source/WebGPU/WGSL/TypeCheck.cpp:
(WGSL::TypeChecker::visitVariable):
* Source/WebGPU/WGSL/Types.cpp:
(WGSL::Type::isStorable const):
(WGSL::Type::isHostShareable const):
(WGSL::Type::hasFixedFootprint const):
* Source/WebGPU/WGSL/Types.h:

Canonical link: https://commits.webkit.org/274243@main